--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ flutter:
     - assets/icons/
 
   fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
     - family: Outfit
       fonts:
         - asset: assets/fonts/Outfit-Regular.ttf
