--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_slidable: ^3.0.1
   fluttertoast: ^8.2.8
   showcaseview: ^4.0.1
+  liquid_swipe: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.1.0
@@ -49,6 +50,10 @@ flutter:
     - family: Outfit
       fonts:
         - asset: assets/fonts/Outfit-Regular.ttf
+        - asset: assets/fonts/Outfit-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Outfit-Medium.ttf
+          weight: 500
     - family: Gilroy
       fonts:
         - asset: assets/fonts/Gilroy-Light.ttf
