--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   fluttertoast: ^8.2.8
   showcaseview: ^4.0.1
   liquid_swipe: ^3.1.0
+  image_cropper: ^9.0.0
 
 dev_dependencies:
   build_runner: ^2.1.0
