--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
     - family: Outfit
       fonts:
         - asset: assets/fonts/Outfit-Regular.ttf
+          weight: 400
         - asset: assets/fonts/Outfit-Light.ttf
           weight: 300
         - asset: assets/fonts/Outfit-Medium.ttf
