--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   showcaseview: ^4.0.1
   liquid_swipe: ^3.1.0
   image_cropper: ^9.0.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   build_runner: ^2.1.0
